--- a/tests/CMakelists.txt
+++ b/tests/CMakelists.txt
@@ -3,3 +3,4 @@ set (gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 add_subdirectory (googletest EXCLUDE_FROM_ALL)
 
 add_subdirectory(microtests)
+add_subdirectory(sandbox_tests)
