Break up Tree microtests into seperate files for different catergories

--- a/tests/microtests/CMakeLists.txt
+++ b/tests/microtests/CMakeLists.txt
@@ -1,6 +1,12 @@
 
 set(target_SRC
-    test_tree.cpp
+    test_builder.cpp
+    test_tree_array_usage.cpp
+    test_tree_construction.cpp
+    test_tree_document_usage.cpp
+    test_tree_erase.cpp
+    test_tree_iteration.cpp
+    test_tree_value_usage.cpp
     test_value.cpp
 )
 
