Begin implementing array and document builders

--- a/tests/microtests/CMakeLists.txt
+++ b/tests/microtests/CMakeLists.txt
@@ -1,6 +1,7 @@
 
 set(target_SRC
-    test_builder.cpp
+    builder/basic/test_array.cpp
+    builder/basic/test_document.cpp
     test_tree_array_usage.cpp
     test_tree_comparison.cpp
     test_tree_construction.cpp
