Update inteferace to builder
Begin implementing conversion

--- a/tests/microtests/CMakeLists.txt
+++ b/tests/microtests/CMakeLists.txt
@@ -1,6 +1,8 @@
 
 set(target_SRC
+    conversion_helpers/test_tokenize.cpp
     test_builder.cpp
+    test_conversion_from_json_string.cpp
     test_tree_array_usage.cpp
     test_tree_comparison.cpp
     test_tree_construction.cpp
