Continue implementing conversion from text to json tree

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,7 @@
 set(target_SRC
     conversion_helpers/lexer.cpp
+    conversion_helpers/to_json_text.cpp
+    conversion_helpers/token.cpp
     builder.cpp
     conversion.cpp
     tree.cpp
