--- a/tests/microtests/CMakeLists.txt
+++ b/tests/microtests/CMakeLists.txt
@@ -2,6 +2,7 @@
 set(target_SRC
     conversion_helpers/test_grammer.cpp
     conversion_helpers/test_lexer.cpp
+    conversion_helpers/test_to_json_text.cpp
     test_builder.cpp
     test_conversion_from_json_string.cpp
     test_tree_array_usage.cpp
