--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,8 @@ include(make_check_macros)
 
 setup_make_check()
 
-add_definitions(-std=c++1z)
+set (CMAKE_CXX_STANDARD 17)
+set (CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_subdirectory(src)
 
